tenant theme configuration api binding with UI and apply configured theme after login also switch it on tenant switching if user have multiple tenant map

--- a/App/ClientApp/src/app/select-tenant/select-tenant.component.html
+++ b/App/ClientApp/src/app/select-tenant/select-tenant.component.html
@@ -3,7 +3,7 @@
       <div class="row">
           <div class="col-sm-12 account-heading">
               <h3>Select Tenant </h3>
-              <p> Please choose from the below options </p>
+              <h6> Please choose from the below options </h6>
           </div>
       </div>
       <div class="row">
