--- a/App/ClientApp/src/app/layout/theme-configuration/theme-configuration.component.html
+++ b/App/ClientApp/src/app/layout/theme-configuration/theme-configuration.component.html
@@ -1,9 +1,10 @@
 <div class="main-container">
+
   <div class="page-title">
     <span class="xs-title"> Theme Configuration </span>
-    <!--<span class="xs-title" *ngIf="updateOperationMode == true"> Update Tenant  </span>-->
   </div>
-  <form>
+
+  <form [formGroup]="tenantThemeConfigurationForm" name="tenantThemeConfigurationForm" autocomplete="on" novalidate>
     <div class="card border-0 mb-2 card-shadow">
       <div class="card-body">
         <div class="row">
@@ -79,30 +80,19 @@
             </div>
           </div>
         </div>
-        <div class="row" *ngIf="isCustome">
+        <div class="row" *ngIf="isWidgetTheme">
           <div class="col-sm-8">
             <div class="card bg-light border-card form-group">
               <div class="card-header bg-white">
                 <label class="mb-0">Select Color Theme </label>
-        </div>
+              </div>
               <div class="card-body">
-                <!--<div class="row">
-                  <div class="col-sm-3">
-                    <label>Foreground Color</label>
-                    <input type="color" class="form-control" />
-                  </div>
-                  <div class="col-sm-3">
-                    <label>Background Color</label>
-                    <input type="color" class="form-control" />
-                  </div>
-                </div>-->
                 <div class="row mt-2">
                   <div class="col-sm-6">
-                    <!--<label>Select Color Theme</label>-->
                     <div class="custom-control custom-radio mr-2 mb-2">
                       <input class="custom-control-input" type="radio" checked
-                             name="themeChartOption" id="themeChart1" value="optionthemeChart">
-                      <label class="custom-control-label dir-rtl" for="themeChart1">
+                             name="themeChartOption" id="charttheme1" value="charttheme1" (click)="widgetColorThemeClicked('ChartTheme1')">
+                      <label class="custom-control-label dir-rtl" for="charttheme1">
                         <div class="d-flex justify-content-start">
                           <div class="clr-box" style="background-color:#342ead"></div>
                           <div class="clr-box" style="background-color:#EA6227"></div>
@@ -113,8 +103,8 @@
                     </div>
                     <div class="custom-control custom-radio mr-2">
                       <input class="custom-control-input" type="radio"
-                             name="themeChartOption" id="themeChart2" value="optionthemeChart">
-                      <label class="custom-control-label dir-rtl" for="themeChart2">
+                             name="themeChartOption" id="charttheme2" value="charttheme2" (click)="widgetColorThemeClicked('ChartTheme2')">
+                      <label class="custom-control-label dir-rtl" for="chartTheme2">
                         <div class="d-flex justify-content-start">
                           <div class="clr-box" style="background-color:#45046a"></div>
                           <div class="clr-box" style="background-color: #5c2a9d"></div>
@@ -128,8 +118,8 @@
                     <!--<label>&nbsp;</label>-->
                     <div class="custom-control custom-radio mr-2 mb-2">
                       <input class="custom-control-input" type="radio"
-                             name="themeChartOption" id="themeChart3" value="optionthemeChart">
-                      <label class="custom-control-label dir-rtl" for="themeChart3">
+                             name="themeChartOption" id="charttheme3" value="charttheme3" (click)="widgetColorThemeClicked('ChartTheme3')">
+                      <label class="custom-control-label dir-rtl" for="chartTheme3">
                         <div class="d-flex justify-content-start">
                           <div class="clr-box" style="background-color: #805D93;"></div>
                           <div class="clr-box" style="background-color: #F49FBC;"></div>
@@ -140,8 +130,8 @@
                     </div>
                     <div class="custom-control custom-radio mr-2">
                       <input class="custom-control-input" type="radio"
-                             name="themeChartOption" id="themeChart4" value="optionthemeChart">
-                      <label class="custom-control-label dir-rtl" for="themeChart4">
+                             name="themeChartOption" id="charttheme4" value="charttheme4" (click)="widgetColorThemeClicked('ChartTheme4')">
+                      <label class="custom-control-label dir-rtl" for="chartTheme4">
                         <div class="d-flex justify-content-start">
                           <div class="clr-box" style="background-color: #303960"></div>
                           <div class="clr-box" style="background-color: #ea9a96"></div>
@@ -157,39 +147,32 @@
 
           </div>
         </div>
-        <div class="row" *ngIf="isCustome">
+        <div class="row" *ngIf="isWidgetTheme">
           <div class="col-sm-8">
             <div class="card bg-light border-card form-group">
               <div class="card-header bg-white">
                 <label class="mb-0">Title Font</label>
               </div>
               <div class="card-body">
-
                 <div class="row">
                   <div class="col-md-3 col-sm-6">
                     <label> Color</label>
-                    <input type="color" class="form-control" />
+                    <input type="color" class="form-control" formControlName="TitleFontColor" id="inputTitleFontColor"/>
                   </div>
                   <div class="col-md-3 col-sm-6">
                     <label> Size</label>
-                    <input type="number" class="form-control" />
+                    <input type="number" class="form-control" formControlName="TitleFontSize" id="inputTitleFontSize"/>
                   </div>
                   <div class="col-md-3 col-sm-6">
                     <label> Weight</label>
-                    <select class="form-control">
-                      <option>Select</option>
-                      <option>Normal</option>
-                      <option>Italic</option>
-                      <option>Bold</option>
+                    <select class="form-control" formControlName="TitleFontWeight" (change)='titleFontWeightChange($event)'>
+                      <option *ngFor="let weight of fontWeightArr" [value]="weight.Value">{{weight.Value}}</option>
                     </select>
                   </div>
                   <div class="col-md-3 col-sm-6 form-group">
                     <label> Type</label>
-                    <select class="form-control">
-                      <option>Select</option>
-                      <option>Type 01</option>
-                      <option>Type 02</option>
-                      <option>Type 03</option>
+                    <select class="form-control" formControlName="TitleFontType" (change)='titleFontTypeChange($event)'>
+                      <option *ngFor="let type of fontTypeArr" [value]="type.Value">{{type.Value}}</option>
                     </select>
                   </div>
                 </div>
@@ -198,39 +181,32 @@
 
           </div>
         </div>
-        <div class="row" *ngIf="isCustome">
+        <div class="row" *ngIf="isWidgetTheme">
           <div class="col-sm-8">
             <div class="card bg-light border-card form-group">
               <div class="card-header bg-white">
                 <label class="mb-0">Header/Label Font</label>
               </div>
               <div class="card-body">
-
                 <div class="row">
                   <div class="col-md-3 col-sm-6">
                     <label> Color</label>
-                    <input type="color" class="form-control" />
+                    <input type="color" class="form-control" formControlName="HeaderLabelFontColor" id="inputHeaderLabelFontColor"/>
                   </div>
                   <div class="col-md-3 col-sm-6">
                     <label> Size</label>
-                    <input type="number" class="form-control" />
+                    <input type="number" class="form-control" formControlName="HeaderLabelFontSize" id="inputHeaderLabelFontSize"/>
                   </div>
                   <div class="col-md-3 col-sm-6">
                     <label> Weight</label>
-                    <select class="form-control">
-                      <option>Select</option>
-                      <option>Normal</option>
-                      <option>Italic</option>
-                      <option>Bold</option>
+                    <select class="form-control" formControlName="HeaderLabelFontWeight" (change)='headerLabelFontWeightChange($event)'>
+                      <option *ngFor="let weight of fontWeightArr" [value]="weight.Value">{{weight.Value}}</option>
                     </select>
                   </div>
                   <div class="col-md-3 col-sm-6 form-group">
                     <label> Type</label>
-                    <select class="form-control">
-                      <option>Select</option>
-                      <option>Type 01</option>
-                      <option>Type 02</option>
-                      <option>Type 03</option>
+                    <select class="form-control" formControlName="HeaderLabelFontType" (change)='headerLabelFontTypeChange($event)'>
+                      <option *ngFor="let type of fontTypeArr" [value]="type.Value">{{type.Value}}</option>
                     </select>
                   </div>
                 </div>
@@ -238,39 +214,32 @@
             </div>
           </div>
         </div>
-        <div class="row"  *ngIf="isCustome">
+        <div class="row"  *ngIf="isWidgetTheme">
           <div class="col-sm-8">
             <div class="card bg-light border-card form-group">
               <div class="card-header bg-white">
                 <label class="mb-0">Data Font</label>
               </div>
               <div class="card-body">
-
                 <div class="row">
                   <div class="col-md-3 col-sm-6">
                     <label> Color</label>
-                    <input type="color" class="form-control" />
+                    <input type="color" class="form-control" formControlName="DataLabelFontColor" id="inputDataLabelFontColor"/>
                   </div>
                   <div class="col-md-3 col-sm-6">
                     <label> Size</label>
-                    <input type="number" class="form-control" />
+                    <input type="number" class="form-control" formControlName="DataLabelFontSize" id="inputDataLabelFontSize"/>
                   </div>
                   <div class="col-md-3 col-sm-6">
                     <label> Weight</label>
-                    <select class="form-control">
-                      <option>Select</option>
-                      <option>Normal</option>
-                      <option>Italic</option>
-                      <option>Bold</option>
+                    <select class="form-control" formControlName="DataLabelFontWeight" (change)='dataLabelFontWeightChange($event)'>
+                      <option *ngFor="let weight of fontWeightArr" [value]="weight.Value">{{weight.Value}}</option>
                     </select>
                   </div>
                   <div class="col-md-3 col-sm-6 form-group">
                     <label> Type</label>
-                    <select class="form-control">
-                      <option>Select</option>
-                      <option>Type 01</option>
-                      <option>Type 02</option>
-                      <option>Type 03</option>
+                    <select class="form-control" formControlName="DataLabelFontType" (change)='dataLabelFontTypeChange($event)'>
+                      <option *ngFor="let type of fontTypeArr" [value]="type.Value">{{type.Value}}</option>
                     </select>
                   </div>
                 </div>
@@ -283,11 +252,10 @@
     </div>
   </form>
 
-
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2" id="btnSave">Save</button>
-      <button class="btn-footer-outline" id="btnCancel">Cancel</button>
+      <button class="btn-footer-fill mr-2" id="btnSave" (click)="onSubmit()">Save</button>
+      <!-- <button class="btn-footer-outline" id="btnCancel">Cancel</button> -->
     </div>
   </div>
 </div>
