--- a/App/ClientApp/src/app/layout/tenants/view/view.component.html
+++ b/App/ClientApp/src/app/layout/tenants/view/view.component.html
@@ -29,7 +29,7 @@
               <!--letter image-->
               <div *ngIf="tenant.TenantLogo=='' || tenant.TenantLogo==null">
                 <div class="ltr-img">
-                  <span>{{tenant.TenantName.charAt(0) | titlecase}}</span>
+                  <span *ngIf='tenant.TenantName!=undefined'>{{tenant.TenantName.charAt(0) | titlecase}}</span>
                   <!-- <span>{{tenant.LastName.charAt(0) | titlecase}}</span> -->
                 </div>
               </div>
@@ -60,7 +60,7 @@
             <div class="row">
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Country</label>
-                <div>{{tenant.Country.CountryName}}</div>
+                <div *ngIf='tenant.Country!=undefined'>{{tenant.Country.CountryName}}</div>
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>State</label>
@@ -109,26 +109,26 @@
           <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
             <!-- Position Column -->
             <ng-container matColumnDef="contactType">
-              <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Contact Type </th>
+              <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Contact Type </th>
               <td mat-cell *matCellDef="let contact">{{contact.ContactType}}</td>
             </ng-container>
 
             <ng-container matColumnDef="firstName">
-              <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+              <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
               <td mat-cell *matCellDef="let contact">
                 <span *ngIf="contact.FirstName==null">-</span>
                 <span *ngIf="contact.FirstName!=null">{{contact.FirstName}} </span>
               </td>
             </ng-container>
             <ng-container matColumnDef="lastName">
-              <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+              <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
               <td mat-cell *matCellDef="let contact">
                 <span *ngIf="contact.LastName==null">-</span>
                 <span *ngIf="contact.LastName!=null">{{contact.LastName}} </span>
               </td>
             </ng-container>
             <ng-container matColumnDef="email">
-              <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+              <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
               <td mat-cell *matCellDef="let contact">
                 <span *ngIf="contact.EmailAddress==null">-</span>
                 <span *ngIf="contact.EmailAddress!=null">{{contact.EmailAddress}} </span>
