--- a/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
@@ -24,8 +24,8 @@
       <div class="widget-area-grid padding-0">
         <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
           <!-- Position Column -->
-          <ng-container matColumnDef="Name">
-            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+          <ng-container matColumnDef="WidgetName">
+            <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.WidgetName}}</td>
           </ng-container>
           <ng-container matColumnDef="Product">
@@ -47,13 +47,13 @@
               <span *ngIf="dynamicwidget.WidgetType!=null">{{dynamicwidget.WidgetType}} </span>
             </td>
           </ng-container>
-          <ng-container matColumnDef="Owner">
+          <!--<ng-container matColumnDef="Owner">
             <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
             <td mat-cell *matCellDef="let dynamicwidget">
               <span *ngIf="dynamicwidget.CreatedByName==null">-</span>
               <span *ngIf="dynamicwidget.CreatedByName!=null">{{dynamicwidget.CreatedByName}} </span>
             </td>
-          </ng-container>
+          </ng-container>-->
           <ng-container matColumnDef="PublishedBy">
             <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
             <td mat-cell *matCellDef="let dynamicwidget">
@@ -65,7 +65,7 @@
             <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header>  Published Date </th>
             <td mat-cell *matCellDef="let dynamicwidget">
               <span *ngIf="dynamicwidget.PublishedDate==null">-</span>
-              <span *ngIf="dynamicwidget.PublishedDate!=null">{{dynamicwidget.PublishedDate}} </span>
+              <span *ngIf="dynamicwidget.PublishedDate!=null">{{dynamicwidget.PublishedDate  | date:DataFormat}} </span>
             </td>
           </ng-container>
           <ng-container matColumnDef="Status">
@@ -80,7 +80,7 @@
             <th class="width15 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let dynamicwidget">
               <div class="action-btns btn-tbl-action">
-                <button type="button" id="btnViewRole" title="View" (click)="navigateToView()">
+                <button type="button" id="btnViewRole" title="View" (click)="navigateToView(dynamicwidget)">
                   <span class="fa fa-file-text-o"></span>
                 </button>
                 <button type="button" id="btnUpdateRole" *ngIf="dynamicwidget.Status=='New'" title="Update" (click)="navigationToEditDynamicWidget(dynamicwidget)">
