--- a/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
@@ -82,13 +82,13 @@
                       <div class="col-md-6 col-lg-6 col-sm-6 form-group">
                         <label>Series</label><span class="text-danger ml-2">*</span>
                         <select formControlName="PieSeries" (change)="onEntityFieldSelected($event,'Form')" class="form-control">
-                          <option *ngFor="let pt of entityFieldList " [value]="pt.Identifier">{{pt.Name}}</option>
+                          <option *ngFor="let pt of pieChartSeriesEntityFields " [value]="pt.Identifier">{{pt.Name}}</option>
                         </select>
                       </div>
                       <div class="col-md-6 col-lg-6 col-sm-6 form-group">
                         <label>Value</label><span class="text-danger ml-2">*</span>
                         <select formControlName="PieValue" (change)="onEntityFieldSelected($event,'Form')" class="form-control">
-                          <option *ngFor="let pt of entityFieldList" [value]="pt.Identifier">{{pt.Name}}</option>
+                          <option *ngFor="let pt of pieChartValueEntityFields" [value]="pt.Identifier">{{pt.Name}}</option>
                         </select>
                       </div>
                     </div>
@@ -121,7 +121,7 @@
                       <div class="col-md-5 col-lg-5 col-sm-5">
                         <label>Field Name</label><span class="text-danger ml-2">*</span>
                         <select formControlName="LineBarEntityField" (change)="onEntityFieldSelected($event,'Form')" class="form-control">
-                          <option *ngFor="let pt of entityFieldList" [value]="pt.Identifier">{{pt.Name}}</option>
+                          <option *ngFor="let pt of lineBarGraphFields" [value]="pt.Identifier">{{pt.Name}}</option>
                         </select>
                       </div>
                       <div class="col-md-5 col-lg-5 col-sm-5">
