--- a/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
@@ -28,6 +28,10 @@
             <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.WidgetName}}</td>
           </ng-container>
+          <!--<ng-container matColumnDef="Version">
+            <th class="width5 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
+            <td mat-cell *matCellDef="let dynamicwidget">V{{dynamicwidget.Version}}.0 </td>
+          </ng-container>-->
           <ng-container matColumnDef="Product">
             <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Page Type </th>
             <td mat-cell *matCellDef="let dynamicwidget">{{dynamicwidget.PageTypeName}}</td>
@@ -48,12 +52,12 @@
             </td>
           </ng-container>
           <!--<ng-container matColumnDef="Owner">
-            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
-            <td mat-cell *matCellDef="let dynamicwidget">
-              <span *ngIf="dynamicwidget.CreatedByName==null">-</span>
-              <span *ngIf="dynamicwidget.CreatedByName!=null">{{dynamicwidget.CreatedByName}} </span>
-            </td>
-          </ng-container>-->
+    <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
+    <td mat-cell *matCellDef="let dynamicwidget">
+      <span *ngIf="dynamicwidget.CreatedByName==null">-</span>
+      <span *ngIf="dynamicwidget.CreatedByName!=null">{{dynamicwidget.CreatedByName}} </span>
+    </td>
+  </ng-container>-->
           <ng-container matColumnDef="PublishedBy">
             <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
             <td mat-cell *matCellDef="let dynamicwidget">
