--- a/App/ClientApp/src/app/layout/widget-dynamic/view/view.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/view/view.component.html
@@ -439,8 +439,8 @@
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2" id="btnSave">Update</button>
-      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete">Delete</button>
+      <button class="btn-footer-fill mr-2"  *ngIf="dynamicWidgetDetails.Status=='New'" id="btnSave" (click)="navigationToEditDynamicWidget()">Update</button>
+      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="DeleteDynamicWidget()">Delete</button>
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
     </div>
   </div>
