--- a/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/widgetdesigner/widgetdesigner.component.html
@@ -79,13 +79,17 @@
                       </div>-->
                     </div>
                     <div class="row">
-                      <div class="col-md-6 col-lg-6 col-sm-6 form-group">
+                      <div class="col-md-4 col-lg-4 col-sm-4 form-group">
                         <label>Series</label><span class="text-danger ml-2">*</span>
                         <select formControlName="PieSeries" (change)="onEntityFieldSelected($event,'Form')" class="form-control">
                           <option *ngFor="let pt of pieChartSeriesEntityFields " [value]="pt.Identifier">{{pt.Name}}</option>
                         </select>
                       </div>
-                      <div class="col-md-6 col-lg-6 col-sm-6 form-group">
+                      <div class="col-md-4 col-lg-4 col-sm-4 form-group">
+                        <label>Display Name</label>
+                        <input type="text" class="form-control" formControlName="PieSeriesName" />
+                      </div>
+                      <div class="col-md-4 col-lg-4 col-sm-4 form-group">
                         <label>Value</label><span class="text-danger ml-2">*</span>
                         <select formControlName="PieValue" (change)="onEntityFieldSelected($event,'Form')" class="form-control">
                           <option *ngFor="let pt of pieChartValueEntityFields" [value]="pt.Identifier">{{pt.Name}}</option>
@@ -274,12 +278,14 @@
                     </div>
                     <div class="row">
                       <div class="col-sm-12 form-group">
-                        <ejs-richtexteditor id='defaultRTE' [inlineMode]='inlineMode' [format]='format'  #htmleditor style="height:300px">
-                          <ng-template #valueTemplate>
+                        <!--<form #form='ngForm' (ngSubmit)="onSubmit(form)">-->
+                          <ejs-richtexteditor id='defaultRTE' [value]="editorValue"
+                                              #htmleditor style="height:300px">
 
-                          </ng-template>
-                        </ejs-richtexteditor>
+                          </ejs-richtexteditor>
 
+                         
+                        <!--</form>-->
                       </div>
                     </div>
                   </div>
